Ensure correct lifecycle for the focused element in Document::SetFocusedElement

Sticky elements require that the lifecycle be cleaned to
kCompositingInputsClean (or pre-paint for SPv2). Calling
EnsurePaintLocationDataValidForNode instead of
UpdateStyleAndLayoutTreeForNode makes sure that happens.

Bug: 805800
Change-Id: I9d8301c563323473f63e205e57fbaddd65c88df8